----------

- Fixes:
   * systemd backend error on bad utf-8 in python3
   * badips.py action error when logging HTTP error raised with badips request
   * fail2ban-regex failed to work in python3 due to space/tab mix
   * journalmatch for recidive incorrect PRIORITY
   * loglevel couldn't be changed in fail2ban.conf
   * Handle case when no sqlite library is available for persistent database

- New features:


- Enhancements
   * Fail2ban-regex - add print-all-matched option. Closes gh-652

ver. 0.9.0 (2014/03/14 - beta
----------

Carries all fixes, features and enhancements from 0.8.13 (unreleased) with
major changes.

The minimum supported python version is now 2.6. If you have python-2.4 or 2.5
you can use the 0.8.12 version of fail2ban.

Please take note of release notes:
https://github.com/fail2ban/fail2ban/releases/tag/0.9.0

Please test your configuration before relying on it.

Nearly all development is thanks to Steven Hiscocks (THANKS!), merging,
testcases and timezone support from Daniel Black, and code-review and minor
additions from Yaroslav Halchenko.

- Refactoring (IMPORTANT -- Please review your setup and configuration):
   * [..bddbf1e] jail.conf was heavily refactored and now is similar
     to how it looked on Debian systems:
     - default action could be configured once for all jails
     - jails definitions only provide customizations (port, logpath)
     - no need to specify 'filter' if name matches jail name
   * [..5aef036] Core functionality moved into fail2ban/ module.
     Closes gh-26
     - tests included in module to aid testing and debugging
   * Added fail2ban persistent database
     - default location at /var/lib/fail2ban/fail2ban.sqlite3
     - allows active bans to be reinstated on restart
     - log files read from last position after restart
   * Added systemd journal backend
     - Dependency on python-systemd
     - New "journalmatch" option added to filter configs files